fix(easi-select): wrap options

--- a/src/a-easi-select/component.css
+++ b/src/a-easi-select/component.css
@@ -4,10 +4,17 @@
 
 :host {
     position: relative;
-    display: inline-grid;
+    display:inline-flex;
+    -overflow: hidden;
+}
+
+.options {
+    flex: 1;
+    display: grid;
     grid-gap: var(--easi-grid-gap);
     grid-auto-columns: 1fr;
     grid-auto-flow: column;
+    -overflow-x: auto;
 }
 
 label {
@@ -22,8 +29,8 @@ label {
     font-size: var(--easi-select-label-font-size);
 }
 
-label span{
-  z-index: 1;
+label span {
+    z-index: 1;
 }
 
 :host([disabled]) label {
